--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,23 @@ p {
   font-weight: 700;
 }
 
+.results {
+  background-color: #9999FF;
+  font-family: "Raleway", sans-serif;
+  padding: 5px;
+  border: 3px black solid;
+  border-radius: 10px;
+  display: inline-block;
+  width: 250px;
+  position: fixed;
+  left: 50%;
+  margin-left:-125px;
+}
+
+.results h2 {
+  color: #000000;
+}
+
 .clearfix:after {
   visibility: hidden;
   display: block;
